# pattern-of-life-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: frontend.py
app/tabs/: __init__.py  integrity.py  taxonomy.py
app/tabs/taxonomy_elements/: __init__.py  analytic_summary.py  data_view.py  global_view.py  local_view.py  location_mining.py  location_prediction.py  location_profiling.py  process.py  reset.py
polkit/: __init__.py
polkit/analyze/: __init__.py  measurements.py  temporal_analyzer.py
polkit/predict/: __init__.py  markov_chain.py  markov_evaluator.py
polkit/strategy/: markov_chain.py  markov_evaluator.py
polkit/taxonomy/: __init__.py  location_profiler.py
polkit/taxonomy/anchor_points/: __init__.py  bed_down_identifier.py  work_identifier.py
polkit/taxonomy/location_mining/: __init__.py  staypoint_clusterer.py  staypoint_detector.py
polkit/utils/: __init__.py  geolife_reader.py  helpers.py  logger.py
polkit/visualize/: __init__.py  chart_maker.py  map_maker.py  network_builder.py
research/: kalman_filter.py  time_aware_markov_manager.py  trip_legs.py
scripts/: eval_single_markov.py  run_single_markov.py  screen_geolife_users.py
