[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polkit"
version = "0.1.0"
description = "A Pattern-of-Life Analysis Toolkit for geospatial mobility data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Shane Teel"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT Licence",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.17.0",
    "pandas>=2.0.0",
    
    "shapely>=2.1.2",
    "geopy>=2.4.1",

    "scikit-learn>=1.8.0",

    "plotly>=6.5.2",
    "calplot>=0.1.7.5",
    "folium<=0.20.0",
    "networkx>=3.6.1",

    "streamlit>=1.33.0",
    "streamlit-folium>=0.26.1"
    ]

[project.urls]
Homepage = "https://github.com/ShaneTeel/pattern-of-life-analysis"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]