[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polkit"
version = "0.1.0"
description = "A Pattern-of-Life Analysis Toolkit for geospatial mobility data"
readme = "README.md"
requires-python = ">=3.8"
license = {file="LICENSE"}
authors = [
    {name = "Shane Teel"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy==2.4.4",
    "scipy==1.17.1",
    "pandas==3.0.2",
    "pytz==2026.1.post1",

    "shapely==2.1.2",
    "geopy==2.4.1",

    "scikit-learn==1.8.0",

    "plotly==6.7.0",
    "calplot==0.1.7.5",
    "folium==0.20.0",
    "networkx==3.6.1",

    "streamlit==1.56.0",
    "streamlit-folium==0.27.1"
    ]

[project.urls]
Homepage = "https://github.com/ShaneTeel/pattern-of-life-analysis"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]